working on build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: 'go/src/sqlpipe/arm'
+          SOURCE_DIR: 'go/src/sqlpipe/bin'
           DEST_DIR: 'arm/v2'
   # build-x86-binaries:
   #   name: Build x86 binaries
