--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,8 +55,6 @@ jobs:
     needs: start-arm-runner
     runs-on: ${{ needs.start-arm-runner.outputs.label }}
     steps:
-      - name: sha
-        run: echo ${GITHUB_SHA}
       - name: Add go to path
         run: echo "/usr/local/go/bin" >> $GITHUB_PATH
       - name: Setup go directory
@@ -68,28 +66,28 @@ jobs:
       - name: Setup go cache
         run: mkdir gocache
       - name: Build macos
-        run: go build -ldflags='-s ${GITHUB_SHA}' -o=./bin/macos/sqlpipe ./cmd
+        run: go build -ldflags='-s $GITHUB_SHA' -o=./bin/macos/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: darwin
           GOARCH: arm64
       - name: Build linux
-        run: go build -ldflags='-s ${GITHUB_SHA}' -o=./bin/linux/sqlpipe ./cmd
+        run: go build -ldflags='-s $GITHUB_SHA' -o=./bin/linux/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: linux 
           GOARCH: arm64
       - name: Build windows
-        run: go build -ldflags='-s ${GITHUB_SHA}' -o=./bin/windows/sqlpipe ./cmd
+        run: go build -ldflags='-s $GITHUB_SHA' -o=./bin/windows/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: windows
           GOARCH: arm64
       - name: Build freebsd
-        run: go build -ldflags='-s ${GITHUB_SHA}' -o=./bin/freebsd/sqlpipe ./cmd
+        run: go build -ldflags='-s $GITHUB_SHA' -o=./bin/freebsd/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
