--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,21 +73,21 @@ jobs:
           GOOS: darwin
           GOARCH: arm64
       - name: Build linux
-        run: go build -ldflags='-s X main.gitHash=$GITHUB_SHA' -o=./bin/linux/sqlpipe ./cmd
+        run: go build -ldflags='-s -X main.gitHash=$GITHUB_SHA' -o=./bin/linux/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: linux 
           GOARCH: arm64
       - name: Build windows
-        run: go build -ldflags='-s X main.gitHash=$GITHUB_SHA' -o=./bin/windows/sqlpipe ./cmd
+        run: go build -ldflags='-s -X main.gitHash=$GITHUB_SHA' -o=./bin/windows/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: windows
           GOARCH: arm64
       - name: Build freebsd
-        run: go build -ldflags='-s X main.gitHash=$GITHUB_SHA' -o=./bin/freebsd/sqlpipe ./cmd
+        run: go build -ldflags='-s -X main.gitHash=$GITHUB_SHA' -o=./bin/freebsd/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
