--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+
+env:
+  HUMAN_VERSION: 1.0.0
+
 jobs:
   start-arm-runner:
     name: Start ARM runner
@@ -66,28 +70,28 @@ jobs:
       - name: Setup go cache
         run: mkdir gocache
       - name: Build macos
-        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long)" -o=./bin/macos/sqlpipe ./cmd
+        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long) -X main.humanVersion=${HUMAN_VERSION}" -o=./bin/macos/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: darwin
           GOARCH: arm64
       - name: Build linux
-        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long)" -o=./bin/linux/sqlpipe ./cmd
+        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long) -X main.humanVersion=${HUMAN_VERSION}" -o=./bin/linux/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: linux 
           GOARCH: arm64
       - name: Build windows
-        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long)" -o=./bin/windows/sqlpipe ./cmd
+        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long) -X main.humanVersion=${HUMAN_VERSION}" -o=./bin/windows/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
           GOOS: windows
           GOARCH: arm64
       - name: Build freebsd
-        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long)" -o=./bin/freebsd/sqlpipe ./cmd
+        run: go build -ldflags="-s -X main.gitHash=$(git describe --always --dirty --tags --long) -X main.humanVersion=${HUMAN_VERSION}" -o=./bin/freebsd/sqlpipe ./cmd
         env:
           GOPATH: /actions-runner/_work/sqlpipe/
           GOCACHE: /actions-runner/_work/sqlpipe/gocache
