got odbc to connect to postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     container_name: sqlpipe
-
-    depends_on:
-      - db
     ports:
-      - 80:80
+      - 9000:9000
+    depends_on:
+      - postgresql
