--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: postgresql
     ports:
       - 5432:5432
-  sqlpipe:
-    image: sqlpipe/sqlpipe
-    container_name: sqlpipe
-    ports:
-      - 9000:9000
+  # sqlpipe:
+  #   image: sqlpipe/sqlpipe
+  #   container_name: sqlpipe
+  #   ports:
+  #     - 9000:9000
