postgresql, mssql, mysql, and snowflake drivers all working and tests passing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   # sqlpipe:
   #   build:
   #     context: ./
-  #     dockerfile: dockerfile
+  #     dockerfile: oracle.dockerfile
   #   container_name: sqlpipe
   #   ports:
   #     - 9000:9000
