--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,23 @@ services:
     platform: linux/amd64
     ports:
       - "1433:1433"
-
-  # babelfish:
-  #   platform: linux/amd64
-  #   image: jonathanpotts/babelfishpg:2.3.0
-  #   ports:
-  #     - "5432:5432"
-  #     - "1434:1433"
   
   postgresql:
-    # platform: linux/arm64
     image: postgres:15.3
     ports:
       - 5432:5432
     environment:
       - POSTGRES_PASSWORD=Mypass123
+
+  mysql:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=Mypass123
+      - MYSQL_AUTHENTICATION_PLUGIN=mysql_native_password
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
