--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,14 @@ services:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: mssql
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=Mypass123
+      ACCEPT_EULA: Y
+      SA_PASSWORD: Mypass123
     platform: linux/amd64
     volumes:
       - ./setup-sql/mssql.sql:/setup.sql
     command: >
       /bin/bash -c "
+        export TZ=US/Pacific
         /opt/mssql/bin/sqlservr &
         sleep 25;
         /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Mypass123' -d master -i /setup.sql
@@ -24,20 +25,6 @@ services:
         limits:
           memory: 8G
 
-  # oracle:
-  #   image: oracle/database:21.3.0-ee
-  #   container_name: oracle
-  #   ports:
-  #     - "1521:1521"
-  #   environment:
-  #     - ORACLE_PWD=Mypass123
-  #   volumes:
-  #     - ./setup-sql/oracle.sql:/opt/oracle/scripts/startup/setup.sql
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 8G
-  
   postgresql:
     image: postgres:15.3
     container_name: postgresql
@@ -45,6 +32,7 @@ services:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: Mypass123
+      TZ: America/Los_Angeles
     volumes:
       - ./setup-sql/postgresql.sql:/docker-entrypoint-initdb.d/setup.sql
     deploy:
@@ -68,6 +56,20 @@ services:
           memory: 8G
 
 
+  # oracle:
+  #   image: oracle/database:21.3.0-ee
+  #   container_name: oracle
+  #   ports:
+  #     - "1521:1521"
+  #   environment:
+  #     - ORACLE_PWD=Mypass123
+  #   volumes:
+  #     - ./setup-sql/oracle.sql:/opt/oracle/scripts/startup/setup.sql
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 8G
+
   # babelfish:
   #   platform: linux/amd64
   #   image: jonathanpotts/babelfishpg:2.3.0
@@ -75,8 +77,8 @@ services:
   #     - "5432:5432"
   #     - "1434:1433"
 
-volumes:
-  mssql-data:
-  oracle-data:
-  postgresql-data:
-  mysql-data:
+# volumes:
+#   mssql-data:
+#   oracle-data:
+#   postgresql-data:
+#   mysql-data:
