--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.3'
 
 services:
 
-  sqlpipe:
-    build:
-      context: .
-      dockerfile: sqlpipe.dockerfile
-    container_name: sqlpipe
-    ports:
-      - "9000:9000"
-    deploy:
-      resources:
-        limits:
-          memory: 8G
+  # sqlpipe:
+  #   build:
+  #     context: .
+  #     dockerfile: sqlpipe.dockerfile
+  #   container_name: sqlpipe
+  #   ports:
+  #     - "9000:9000"
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 8G
 
   mssql:
     image: mcr.microsoft.com/mssql/server
@@ -71,17 +71,17 @@ services:
     command: --local-infile=1
 
 
-  oracle:
-    image: sqlpipe/oracle:21.3.0
-    container_name: oracle
-    ports:
-      - "1521:1521"
-    environment:
-      - ORACLE_PWD=Mypass123
-      - NLS_CHARACTERSET=AL32UTF8
-    volumes:
-      - ./setup-sql/oracle.sql:/opt/oracle/scripts/startup/setup.sql
-    deploy:
-      resources:
-        limits:
-          memory: 16G
+  # oracle:
+  #   image: sqlpipe/oracle:21.3.0
+  #   container_name: oracle
+  #   ports:
+  #     - "1521:1521"
+  #   environment:
+  #     - ORACLE_PWD=Mypass123
+  #     - NLS_CHARACTERSET=AL32UTF8
+  #   volumes:
+  #     - ./setup-sql/oracle.sql:/opt/oracle/scripts/startup/setup.sql
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 16G
